force-app/main/default/objects/HP_PortailCanal__c/HP_PortailCanal__c.object-meta.xml
<CustomObject>
    <label>Canal</label>
    <nameField>
        <label>Canal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Canaux</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>