force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_Action_Save_3_CRC__c.field-meta.xml
<CustomField>
    <fullName>Droit_Action_Save_3_CRC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action Save 3 CRC</label>
    <type>Checkbox</type>
</CustomField>