force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_ImportFichier__c.field-meta.xml
<CustomField>
    <fullName>Droit_ImportFichier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Fichier</label>
    <type>Checkbox</type>
</CustomField>