force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_PaiementCB__c.field-meta.xml
<CustomField>
    <fullName>Droit_PaiementCB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mode de paiement CB</label>
    <type>Checkbox</type>
</CustomField>