force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_ParcoursEmDm__c.field-meta.xml
<CustomField>
    <fullName>Droit_ParcoursEmDm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parcours EM/DM (avec résiliation)</label>
    <type>Checkbox</type>
</CustomField>