force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_VenteChf1Ex__c.field-meta.xml
<CustomField>
    <fullName>Droit_VenteChf1Ex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vente CHF / 1ex</label>
    <type>Checkbox</type>
</CustomField>