force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_VenteChf2Ex__c.field-meta.xml
<CustomField>
    <fullName>Droit_VenteChf2Ex__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vente CHF / 2ex</label>
    <type>Checkbox</type>
</CustomField>