force-app/main/default/objects/HP_PortailCanal__c/fields/Droit_VenteEm__c.field-meta.xml
<CustomField>
    <fullName>Droit_VenteEm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vente EM</label>
    <type>Checkbox</type>
</CustomField>