force-app/main/default/objects/HP_PortailCanal__c/fields/HP_Liens_SF__c.field-meta.xml
<CustomField>
    <fullName>HP_Liens_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liens SF</label>
    <type>Checkbox</type>
</CustomField>