force-app/main/default/objects/HP_PortailCanal__c/fields/HP_Modif_ventes__c.field-meta.xml
<CustomField>
    <fullName>HP_Modif_ventes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_Modif_ventes</label>
    <type>Checkbox</type>
</CustomField>