force-app/main/default/objects/HP_PortailCanal__c/fields/HP_Paiement_prlvt__c.field-meta.xml
<CustomField>
    <fullName>HP_Paiement_prlvt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_Paiement_prlvt</label>
    <type>Checkbox</type>
</CustomField>