force-app/main/default/objects/HP_PortailCanal__c/fields/HP_Unshort_Lien__c.field-meta.xml
<CustomField>
    <fullName>HP_Unshort_Lien__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unshort Lien</label>
    <type>Checkbox</type>
</CustomField>