force-app/main/default/objects/HP_PortailCanal__c/fields/HP_Vente_Stay__c.field-meta.xml
<CustomField>
    <fullName>HP_Vente_Stay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vente Stay</label>
    <type>Checkbox</type>
</CustomField>