force-app/main/default/objects/HP_PortailCanal__c/fields/HP_Visu_docs__c.field-meta.xml
<CustomField>
    <fullName>HP_Visu_docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HP_Visu_docs</label>
    <type>Checkbox</type>
</CustomField>