force-app/main/default/objects/HP_PortailCanal__c/fields/Visu_docs_s2__c.field-meta.xml
<CustomField>
    <fullName>Visu_docs_s2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visu docs s2</label>
    <type>Checkbox</type>
</CustomField>