force-app/main/default/objects/HP_PortailCanal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Droit_PaiementCB__c</columns>
    <columns>Droit_VenteChf1Ex__c</columns>
    <columns>Droit_VenteChf2Ex__c</columns>
    <columns>Droit_VenteEm__c</columns>
    <columns>Droit_VenteEm1Ex__c</columns>
    <columns>Droit_ParcoursEmDm__c</columns>
    <columns>Droit_RepriseChf1Ex__c</columns>
    <columns>Droit_Action_Save_3_CRC__c</columns>
    <columns>Droit_ImportFichier__c</columns>
    <columns>HP_Modif_ventes__c</columns>
    <columns>HP_Paiement_prlvt__c</columns>
    <columns>Visu_docs_s2__c</columns>
    <columns>HP_Liens_SF__c</columns>
    <columns>HP_Unshort_Lien__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>