force-app/main/default/objects/HP_PortailCanal__c/listViews/HP_Tous.listView-meta.xml
<ListView>
    <fullName>HP_Tous</fullName>
    <columns>NAME</columns>
    <columns>Droit_Action_Save_3_CRC__c</columns>
    <columns>Droit_ImportFichier__c</columns>
    <columns>Droit_PaiementCB__c</columns>
    <columns>Droit_ParcoursEmDm__c</columns>
    <columns>Droit_RepriseChf1Ex__c</columns>
    <columns>Droit_VenteChf1Ex__c</columns>
    <columns>Droit_VenteChf2Ex__c</columns>
    <columns>Droit_VenteEm__c</columns>
    <columns>Droit_VenteEm1Ex__c</columns>
    <columns>HP_Modif_ventes__c</columns>
    <columns>HP_Paiement_prlvt__c</columns>
    <columns>HP_Visu_docs__c</columns>
    <columns>Visu_docs_s2__c</columns>
    <columns>HP_Vente_Stay__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous</label>
</ListView>